Tarea4/Cluster/service.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata:
  name: nginx-ingress       # Nombre del ingress, se puede cambiar
spec:
  rules:
    - host: nginx.local     # El nombre del host que puede cambiar, será la dirección desde la que accedes
      http:
        paths:
          - path: / 
            pathType: Prefix 
            backend:
              service:
                name: nginx-service  # Debe coincidir con el nombre del servicio expuesto en el archivo service.yaml
                port:
                  number: 80         # Puerto del servicio
